# sddup-poc

./: README.md  pyproject.toml
sddup/: __main__.py  data_cipher.py  data_generator.py  pdf_handler.py  sddup.py  xml_handler.py
sddup/data/: iv.b64  sddup_certificate.pem  sddup_private_key.pem  symmetric_key.b64
