[tool.poetry]
name = "sddup"
version = "0.1.0"
description = ""
authors = ["Gabriel Holstein Meireles <ghm12@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^37.1.0"
lxml = "^5.4.0"
fillpdf = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
