[tool.poetry]
name = "sddup"
version = "0.1.0"
description = ""
authors = ["Anonymous"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^37.1.0"
lxml = "^5.4.0"
fillpdf = "^0.7.3"
pyhanko = "^0.26.0"
cryptography = "^44.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
